<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{95f0d3d7-ef12-463a-a495-742fe761b35c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	//Test timers
	fbTON_TestTimer              :  TON;
	fbTON_AirAtPressure          :  TON;
	fbTon_ZVSTimer               :  TON;
	fbTon_MethaneTimer           :  TON;
	fbTon_SeedTime               :  TON;
	fbTon_PistonDelay            :  TON;
	fbTon_PowderIgnitionDelay	 :  TON;
	fbTon_EjectorDelay           :  TON;
	fbTon_ZVSTrigger             :  TON;
	
	//Test Signals and Pulse Generators
	TSIG_ZVSIgnite               :  TSIG;
	TSIG_CombustorAirSolenoid    :  TSIG;
	TSIG_MethaneSolenoid         :  TSIG;
	TSIG_WaterQuenchSolenoid     :  TSIG;
	TSIG_SeederExtendSolenoid    :  TSIG;
	TSIG_SeederRetractSolenoid   :  TSIG;
	TSIG_FluidizationSolenoid    :  TSIG;
	
	//MAIN PROGRAM STATE MACHINE
	state : MAIN_STATE := MAIN_STATE.STARTUP;
	
	//HMI_Commands
	command_StartTest : BOOL;
	command_StopTest  : BOOL;
	command_Reset     : BOOL;
	
	//test variables
	testComplete     : BOOL;
	testTime         : TIME;
	airPressureTime  : TIME := T#2S;
	fbIolSlave       : FB_IolSlave;
	
	startup          : BOOL  := TRUE;
	bUserSeedGoAhead : BOOL := FALSE;
	bRetryIgnition     : BOOL := FALSE;
	
	//IO Link parameters
    nAdsError               : E_AdsErr := E_AdsErr.NOERR;
    nIolError               : E_IolError := E_IolError.NoError;
    sErrorTxt               : STRING(255) := '';
    bError                  : BOOL := FALSE;
    hr                      : HRESULT;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT gIO.DI_ESTOP_L2 THEN
	state := MAIN_STATE.ESTOP;
END_IF

CASE state OF
	MAIN_STATE.STARTUP:
		IF startup THEN
			startup := FALSE;
			fbIolSlave.MasterAoeNetId := F_CreateAmsNetId(gMachineSettings.IoLinkAmsId);
    		fbIolSlave.Port :=  gMachineSettings.IoLinkPort;
			TSIG_ZVSIgnite(Init:=FALSE, pIO:=ADR(gIO.DO_ZVSIgnite), Start_Time:=INT_TO_TIME(HMI.iZVSStartTime), End_Time:=INT_TO_TIME(HMI.iZVSStopTime));
			TSIG_CombustorAirSolenoid(Init:=FALSE, pIO:=ADR(gIO.DO_CombustorAirSolenoid), Start_Time:=INT_TO_TIME(HMI.iAirStartTime), End_Time:=INT_TO_TIME(HMI.iAirStopTime));
			state := MAIN_STATE.IDLE;	
		END_IF
		
	MAIN_STATE.IDLE:
		//Make sure all timers are reset from the idle state
		IF command_StartTest THEN
			command_StartTest := FALSE;
			state := MAIN_STATE.CHECK_TEST_READY;
		END_IF
		
	MAIN_STATE.CHECK_TEST_READY:
		state := MAIN_STATE.SET_TEST_VARIABLES;
		
	MAIN_STATE.SET_TEST_VARIABLES:
		state := MAIN_STATE.START_TEST;
	MAIN_STATE.START_TEST:
		gIO.DO_CollectData := TRUE;
		gIO.DO_WaterQuenchSolenoid := TRUE;
		state := MAIN_STATE.START_AIR;
	MAIN_STATE.START_AIR:
		gIO.DO_CombustorAirSolenoid := TRUE;
		state := MAIN_STATE.CHECK_AIR;
	MAIN_STATE.CHECK_AIR:
		fbTON_AirAtPressure(IN:=TRUE, PT:=gMachineSettings.maxAirPressureDelay);
		IF gScaledInputs.monitoredValues[1].scaledValue > gMachineSettings.minAirPressure AND fbTON_AirAtPressure.ET > gMachineSettings.minAirSettlingTime THEN
			fbTON_AirAtPressure(IN:=FALSE);
			state := MAIN_STATE.START_METHANE;
		ELSIF fbTON_AirAtPressure.Q THEN
			fbTON_AirAtPressure(IN:=FALSE);
			state := MAIN_STATE.STOP;
		ELSE
			state := MAIN_STATE.CHECK_AIR;
		END_IF
	MAIN_STATE.START_METHANE: 
		gIO.DO_MethaneSolenoid := TRUE;
		state := MAIN_STATE.CHECK_METHANE;
	MAIN_STATE.CHECK_METHANE: 
		fbTON_MethaneTimer(IN:=TRUE, PT:=gMachineSettings.maxMethanePressureDelay);
		IF gScaledInputs.monitoredValues[2].scaledValue > gMachineSettings.minMethanePressure AND fbTON_MethaneTimer.ET > gMachineSettings. minMethaneSettlingTime THEN
			fbTON_MethaneTimer(IN:=FALSE);
			state := MAIN_STATE.START_COMBUSTION;
		ELSIF fbTON_MethaneTimer.Q THEN
			fbTON_MethaneTimer(IN:=FALSE);
			state := MAIN_STATE.STOP;
		ELSE
			state := MAIN_STATE.CHECK_METHANE;
		END_IF
	MAIN_STATE.START_COMBUSTION: 
		gIO.DO_ZVSIgnite := TRUE;
		fbTon_ZVSTrigger(IN:=TRUE, PT:=T#2S);
		IF fbTon_ZVSTrigger.Q THEN
			gIO.DO_ZVSIgnite := FALSE;
			fbTon_ZVSTrigger(IN:=FALSE);
			state := MAIN_STATE.CHECK_COMBUSTION; 
		END_IF
	MAIN_STATE.CHECK_COMBUSTION:
		IF bUserSeedGoAhead THEN
			bUserSeedGoAhead := FALSE;
			state := MAIN_STATE.START_EJECTOR;
		ELSIF bRetryIgnition THEN
			state := MAIN_STATE.START_COMBUSTION;
		ELSE
			state := MAIN_STATE.CHECK_COMBUSTION;
		END_IF
	MAIN_STATE.START_EJECTOR:
		gIO.DO_EjectorSolenoid := TRUE;
		fbTon_EjectorDelay(IN:=TRUE, PT:=T#1S);
		IF fbTon_EjectorDelay.Q THEN
			fbTon_EjectorDelay(IN:=FALSE);
			state := MAIN_STATE.CHECK_EJECTOR;
		ELSE
			state := MAIN_STATE.START_EJECTOR;
		END_IF
		
	MAIN_STATE.CHECK_EJECTOR:
		state := MAIN_STATE.RUN_SEED;
	
	MAIN_STATE.RUN_SEED:
		gIO.DO_SeederFluidization := TRUE;
		IF gMachineSettings.motorSeederActive THEN 
			hr := fbIolSlave.Write_INT8(16#0002, 0, 16#C8);
			IF NOT F_IolIsBusy(hr) THEN
				IF FAILED(hr) THEN
					bError := TRUE;
					sErrorTxt := fbIolSlave.ErrorTxt;
					nAdsError := F_IolGetAdsError(hr);
					nIolError := F_IolGetIolError(hr);
					state := MAIN_STATE.STOP;
				END_IF
			END_IF
		ELSIF gMachineSettings.pistonSeederActive THEN
			gIO.DO_SeederExtendSolenoid := TRUE;
		END_IF
		state := MAIN_STATE.WAIT_FOR_EOT;
	MAIN_STATE.WAIT_FOR_EOT: 
		gIO.DO_ZVSIgnite := TRUE;
		fbTon_SeedTime(IN:=TRUE, PT:=gMachineSettings.maxSeedTime);
		fbTon_PowderIgnitionDelay(IN:=TRUE, PT:=gMachineSettings.powderIgnitionTime);
		IF fbTon_PowderIgnitionDelay.Q THEN
			gIO.DO_MethaneSolenoid := FALSE;
			gIO.DO_ZVSIgnite := FALSE;
		END_IF
		IF gMachineSettings.motorSeederActive AND gIO.DI_MotorExtendLimitSensor THEN
			state := MAIN_STATE.TEST_COMPLETE;
		ELSIF gMachineSettings.pistonSeederActive AND gIO.DI_SeederExtendLimitSensor THEN 
			state := MAIN_STATE.TEST_COMPLETE;
		ELSIF fbTon_SeedTime.Q THEN
			state := MAIN_STATE.TEST_COMPLETE;
		ELSE
			state := MAIN_STATE.WAIT_FOR_EOT;
		END_IF	
	MAIN_STATE.TEST_COMPLETE:
		//reset timers
		fbTON_TestTimer(IN:=FALSE);
		fbTON_AirAtPressure(IN:=FALSE);         
		fbTon_ZVSTimer(IN:=FALSE);               
		fbTon_MethaneTimer(IN:=FALSE);        
		fbTon_SeedTime(IN:=FALSE);   
		fbTon_PowderIgnitionDelay(IN:=FALSE);    
		
		//Reset IO
		gIO.DO_CollectData := FALSE;
		gIO.DO_CombustorAirSolenoid := FALSE;
		gIO.DO_MethaneSolenoid := FALSE;
		gIO.DO_SeederExtendSolenoid := FALSE;
		gIO.DO_SeederFluidization := FALSE;
		gIO.DO_WaterQuenchSolenoid := FALSE;
		gIO.DO_ZVSIgnite := FALSE;
		gIO.DO_EjectorSolenoid := FALSE;
		state := MAIN_STATE.BLOWDOWN;
		
	MAIN_STATE.STOP:
		//reset timers
		fbTON_TestTimer(IN:=FALSE);
		fbTON_AirAtPressure(IN:=FALSE);         
		fbTon_ZVSTimer(IN:=FALSE);               
		fbTon_MethaneTimer(IN:=FALSE);        
		fbTon_SeedTime(IN:=FALSE);
		fbTon_PowderIgnitionDelay(IN:=FALSE);         
		
		//turn off solenoids immediately 
		TSIG_ZVSIgnite(Init:=FALSE);
		TSIG_CombustorAirSolenoid(Init:=FALSE);
		gIO.DO_CollectData := FALSE;
		gIO.DO_CombustorAirSolenoid := FALSE;
		gIO.DO_MethaneSolenoid := FALSE;
		gIO.DO_SeederExtendSolenoid := FALSE;
		gIO.DO_SeederFluidization := FALSE;
		gIO.DO_WaterQuenchSolenoid := FALSE;
		gIO.DO_ZVSIgnite := FALSE;
		gIO.DO_EjectorSolenoid := FALSE;
		state := MAIN_STATE.BLOWDOWN;
		//run purge air 
	MAIN_STATE.BLOWDOWN:
		TSIG_CombustorAirSolenoid(Init:=TRUE, Start_Time := INT_TO_TIME(0), End_Time := INT_TO_TIME(5000));
		HMI.iBlowdownTimeProgress := REAL_TO_INT(TIME_TO_INT(TSIG_CombustorAirSolenoid.ET - TSIG_CombustorAirSolenoid.Start_Time) * (100) / TIME_TO_INT(TSIG_CombustorAirSolenoid.End_Time - TSIG_CombustorAirSolenoid.Start_Time));
		IF NOT TSIG_CombustorAirSolenoid.Q THEN
			state := MAIN_STATE.BLOWDOWN_COMPLETE;
		END_IF
	MAIN_STATE.BLOWDOWN_COMPLETE:
		TSIG_CombustorAirSolenoid(Init:=FALSE);
		HMI.iBlowdownTimeProgress := 0;
		state := MAIN_STATE.IDLE;
		
	MAIN_STATE.ESTOP: 
		//reset timers
		fbTON_TestTimer(IN:=FALSE);
		fbTON_AirAtPressure(IN:=FALSE);         
		fbTon_ZVSTimer(IN:=FALSE);               
		fbTon_MethaneTimer(IN:=FALSE);        
		fbTon_SeedTime(IN:=FALSE);  
		TSIG_CombustorAirSolenoid(Init:=FALSE);
		TSIG_ZVSIgnite(Init:=FALSE);
		fbTon_PowderIgnitionDelay(IN:=FALSE); 
		
		//reset IO
		gIO.DO_CombustorAirSolenoid := FALSE;
		gIO.DO_MethaneSolenoid := FALSE;
		gIO.DO_SeederExtendSolenoid := FALSE;
		gIO.DO_SeederFluidization := FALSE;
		gIO.DO_WaterQuenchSolenoid := FALSE;
		gIO.DO_ZVSIgnite := FALSE;
		gIO.DO_EjectorSolenoid := FALSE;
		IF gIO.DI_ESTOP_L2 THEN
			state := MAIN_STATE.WAIT_FOR_RESET;
		END_IF
			
	MAIN_STATE.WAIT_FOR_RESET:
		IF command_Reset THEN
			command_Reset := FALSE;
			bError        := FALSE;
			gIO.DO_Reset  := TRUE;
			state         := MAIN_STATE.RESETTING;
		END_IF
		
	MAIN_STATE.RESETTING: 
		IF gIO.DI_24VAtSolenoids THEN
			gIO.DO_Reset := FALSE;
			state := MAIN_STATE.IDLE;
		END_IF
		
		
END_CASE


//Safety watchdog
IF gScaledInputs.monitoredValues[4].scaledValue < gMachineSettings.minFacilityPressure AND gIO.DO_EjectorSolenoid THEN
	state := MAIN_STATE.STOP;
END_IF

HMI.bEStopPressed := NOT gIO.DI_24VAtSolenoids;
HMI.seedTime      := TIME_TO_STRING(fbTon_SeedTime.ET);
IF command_StopTest THEN
	command_StopTest := FALSE;
	state := MAIN_STATE.STOP;
END_IF

]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="1406" Count="1" />
      <LineId Id="1404" Count="1" />
      <LineId Id="551" Count="0" />
      <LineId Id="928" Count="0" />
      <LineId Id="930" Count="1" />
      <LineId Id="1049" Count="1" />
      <LineId Id="936" Count="1" />
      <LineId Id="1332" Count="0" />
      <LineId Id="932" Count="0" />
      <LineId Id="929" Count="0" />
      <LineId Id="552" Count="2" />
      <LineId Id="742" Count="0" />
      <LineId Id="556" Count="3" />
      <LineId Id="566" Count="1" />
      <LineId Id="569" Count="1" />
      <LineId Id="572" Count="0" />
      <LineId Id="1186" Count="0" />
      <LineId Id="1261" Count="0" />
      <LineId Id="574" Count="0" />
      <LineId Id="991" Count="2" />
      <LineId Id="575" Count="0" />
      <LineId Id="1000" Count="0" />
      <LineId Id="994" Count="1" />
      <LineId Id="1411" Count="0" />
      <LineId Id="998" Count="0" />
      <LineId Id="1412" Count="0" />
      <LineId Id="1001" Count="2" />
      <LineId Id="996" Count="1" />
      <LineId Id="1004" Count="0" />
      <LineId Id="1025" Count="0" />
      <LineId Id="1005" Count="0" />
      <LineId Id="1018" Count="2" />
      <LineId Id="1409" Count="0" />
      <LineId Id="1021" Count="0" />
      <LineId Id="1410" Count="0" />
      <LineId Id="1022" Count="2" />
      <LineId Id="1017" Count="0" />
      <LineId Id="1016" Count="0" />
      <LineId Id="1349" Count="0" />
      <LineId Id="1032" Count="0" />
      <LineId Id="1344" Count="0" />
      <LineId Id="1347" Count="0" />
      <LineId Id="1345" Count="0" />
      <LineId Id="1348" Count="0" />
      <LineId Id="1346" Count="0" />
      <LineId Id="1033" Count="1" />
      <LineId Id="1354" Count="0" />
      <LineId Id="1040" Count="0" />
      <LineId Id="1036" Count="0" />
      <LineId Id="1039" Count="0" />
      <LineId Id="1041" Count="1" />
      <LineId Id="1037" Count="0" />
      <LineId Id="1326" Count="0" />
      <LineId Id="1355" Count="0" />
      <LineId Id="1337" Count="1" />
      <LineId Id="1352" Count="0" />
      <LineId Id="1340" Count="0" />
      <LineId Id="1350" Count="1" />
      <LineId Id="1339" Count="0" />
      <LineId Id="1341" Count="0" />
      <LineId Id="1330" Count="0" />
      <LineId Id="1342" Count="0" />
      <LineId Id="1328" Count="0" />
      <LineId Id="1030" Count="0" />
      <LineId Id="1071" Count="0" />
      <LineId Id="1078" Count="0" />
      <LineId Id="1052" Count="6" />
      <LineId Id="1076" Count="0" />
      <LineId Id="1059" Count="0" />
      <LineId Id="1046" Count="0" />
      <LineId Id="1044" Count="0" />
      <LineId Id="1072" Count="0" />
      <LineId Id="1074" Count="0" />
      <LineId Id="1080" Count="0" />
      <LineId Id="1082" Count="0" />
      <LineId Id="1414" Count="0" />
      <LineId Id="1089" Count="0" />
      <LineId Id="1316" Count="0" />
      <LineId Id="1318" Count="1" />
      <LineId Id="1415" Count="0" />
      <LineId Id="1317" Count="0" />
      <LineId Id="1083" Count="0" />
      <LineId Id="1087" Count="0" />
      <LineId Id="1084" Count="0" />
      <LineId Id="1086" Count="0" />
      <LineId Id="1091" Count="3" />
      <LineId Id="1085" Count="0" />
      <LineId Id="591" Count="1" />
      <LineId Id="1193" Count="3" />
      <LineId Id="1187" Count="0" />
      <LineId Id="1320" Count="0" />
      <LineId Id="1191" Count="1" />
      <LineId Id="1189" Count="0" />
      <LineId Id="1095" Count="5" />
      <LineId Id="1324" Count="0" />
      <LineId Id="600" Count="0" />
      <LineId Id="1188" Count="0" />
      <LineId Id="601" Count="0" />
      <LineId Id="1200" Count="4" />
      <LineId Id="1199" Count="0" />
      <LineId Id="1321" Count="0" />
      <LineId Id="1205" Count="0" />
      <LineId Id="602" Count="1" />
      <LineId Id="608" Count="0" />
      <LineId Id="1190" Count="0" />
      <LineId Id="1103" Count="4" />
      <LineId Id="1102" Count="0" />
      <LineId Id="1323" Count="0" />
      <LineId Id="746" Count="0" />
      <LineId Id="673" Count="0" />
      <LineId Id="752" Count="1" />
      <LineId Id="780" Count="0" />
      <LineId Id="783" Count="1" />
      <LineId Id="779" Count="0" />
      <LineId Id="751" Count="0" />
      <LineId Id="865" Count="0" />
      <LineId Id="778" Count="0" />
      <LineId Id="766" Count="0" />
      <LineId Id="816" Count="0" />
      <LineId Id="1168" Count="0" />
      <LineId Id="1206" Count="0" />
      <LineId Id="1209" Count="3" />
      <LineId Id="1207" Count="0" />
      <LineId Id="1170" Count="1" />
      <LineId Id="1322" Count="0" />
      <LineId Id="1214" Count="1" />
      <LineId Id="1109" Count="4" />
      <LineId Id="1108" Count="0" />
      <LineId Id="1325" Count="0" />
      <LineId Id="909" Count="1" />
      <LineId Id="820" Count="0" />
      <LineId Id="882" Count="0" />
      <LineId Id="901" Count="0" />
      <LineId Id="904" Count="1" />
      <LineId Id="1116" Count="0" />
      <LineId Id="906" Count="2" />
      <LineId Id="1216" Count="0" />
      <LineId Id="883" Count="0" />
      <LineId Id="911" Count="1" />
      <LineId Id="914" Count="0" />
      <LineId Id="913" Count="0" />
      <LineId Id="884" Count="0" />
      <LineId Id="765" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="1181" Count="1" />
      <LineId Id="1178" Count="0" />
      <LineId Id="1177" Count="0" />
      <LineId Id="1179" Count="1" />
      <LineId Id="918" Count="1" />
      <LineId Id="1413" Count="0" />
      <LineId Id="920" Count="4" />
      <LineId Id="712" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>